# DiabetesAI

./: .gitignore  CMakeLists.txt  README.md  ai_realization.hpp  dataset2.csv  datasetLA.csv  main.cpp
prj.cw/: CMakeLists.txt  Doxyfile
prj.cw/doxygen/html/: _form0_dark_tmp.ps  _form0_tmp.ps  _form1_dark_tmp.ps  _form1_tmp.ps  _form2_dark_tmp.ps  _form2_tmp.ps  _formulas.dvi  _formulas.tex  _formulas_dark.dvi  _formulas_dark.tex  annotated.html  class_diabetes_data-members.html  class_diabetes_data.html  class_diabetes_data_a2dca530bd792e41e74a349c2a092d35a_icgraph.dot  class_diabetes_data_a5c1e71193a2115d0c0d24e7503e160ad_cgraph.dot  class_diabetes_data_a5c1e71193a2115d0c0d24e7503e160ad_icgraph.dot  class_diabetes_data_ab0e6fc36b8775df89a47b811ef331843_cgraph.dot  class_diabetes_data_ada379a336a04d95924dded2e900f61bd_cgraph.dot  class_logistic_regression-members.html  class_logistic_regression.html  class_plot-members.html  class_plot.html  classes.html  diabetes__data_8cpp.html  diabetes__data_8hpp.html  diabetes__data_8hpp_source.html  dir_0c18882a44170183f97d3cf72c77ae46.html  dir_0c18882a44170183f97d3cf72c77ae46_dep.dot  dir_0e5edfac1448a24959fb82ea02be57a7.html  dir_0e5edfac1448a24959fb82ea02be57a7_dep.dot  dir_2f1eef70b8994749577a31648b5ce375.html  dir_31c7dff5446dd44343544bd971528a21.html  dir_400f6840c6983718d6f54d69ffaf8ae0.html  dir_400f6840c6983718d6f54d69ffaf8ae0_dep.dot  dir_6fa7d0b509ad2788f7866f3489b34882.html  dir_6fa7d0b509ad2788f7866f3489b34882_dep.dot  dir_83c3a8188d1ee652c4bd53ac629dfdad.html  dir_83c3a8188d1ee652c4bd53ac629dfdad_dep.dot  dir_abb0f207ebd0055876389b323942da3c.html  dir_abb0f207ebd0055876389b323942da3c_dep.dot  (+24 more)
prj.cw/doxygen/latex/: annotated.tex  class_diabetes_data.tex  class_diabetes_data.tex.tmp  class_diabetes_data_a2dca530bd792e41e74a349c2a092d35a_icgraph.dot  class_diabetes_data_a5c1e71193a2115d0c0d24e7503e160ad_cgraph.dot  class_diabetes_data_a5c1e71193a2115d0c0d24e7503e160ad_icgraph.dot  class_logistic_regression.tex  class_plot.tex  (+33 more)
prj.cw/prj.lab/: CMakeLists.txt
prj.cw/prj.lab/diabetes_data/: CMakeLists.txt  diabetes_data.cpp
prj.cw/prj.lab/diabetes_data/include/diabetes_data/: diabetes_data.hpp
prj.cw/prj.lab/regression/: CMakeLists.txt  regression.cpp
prj.cw/prj.lab/regression/include/regression/: regression.hpp
prj.cw/prj.test/: CMakeLists.txt  dataset1.csv  libtest.cpp  main.cpp
prj.lab/: CMakeLists.txt
prj.lab/data/: CMakeLists.txt  data.cpp
prj.lab/plot/: CMakeLists.txt  plot.cpp
prj.lab/regression/: regression.cpp
prj.test/: CMakeLists.txt  main.cpp
(+35 files in other folders)
